Fixed resume bullet points.

--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -2,7 +2,10 @@
   <div class="container">
     <app-section-header [headerTitle]="sectionHeader"></app-section-header>
     <div class="row">
-      <p>Click <button (click)="downloadResume()">HERE</button> to download my resume!</p>
+      <p>
+        Click <button (click)="downloadResume()">HERE</button> to download my
+        resume!
+      </p>
       <div class="col-sm-12 section-container">
         <div class="resume-listing">
           <img
@@ -18,18 +21,28 @@
           <div class="bp-block">
             <ul>
               <li>
-                Utilized Java, Angular, Spring Boot, Spring, and AWS to design,
-                develop and maintain full-stack applications for Fannie Mae.
+                Proficiently utilized Java, Angular, Spring Boot, Spring,
+                PostgreSQL, and AWS to design, develop, and maintain full-stack
+                applications, resulting in robust and scalable software
+                solutions.
               </li>
               <li>
-                Successfully delivered numerous bug fixes for legacy
-                applications, resulting in a high success rate and improving the
-                overall stability of the applications.
+                Utilized Agile methodology to successfully manage and deliver
+                complex projects within tight deadlines, resulting in increased
+                efficiency and customer satisfaction.
               </li>
               <li>
-                Collaborated with cross-functional teams to troubleshoot and
-                resolve issues, ensuring timely delivery of high-quality
-                solutions that met business needs.
+                Demonstrated quick thinking and problem-solving skills by
+                successfully brainstorming, designing, and implementing a
+                solution to resolve an emergency bug involving a
+                NullPointerException that was discovered in the production
+                environment, minimizing downtime, and preventing further impact
+                to end-users.
+              </li>
+              <li>
+                Improved the start time for a legacy Spring application by 45%
+                by modifying the Tomcat server start-up processes to eliminate
+                unnecessary configuration scans.
               </li>
             </ul>
           </div>
@@ -39,7 +52,7 @@
             class="gs"
             src="https://genspark.net/wp-content/uploads/2021/06/logo_GenSpark-e1624721945722.png"
             alt="genspark"
-          /> 
+          />
           <div class="resume-block-gs">
             <h3 class="resume-position">Full Stack Engineer</h3>
             <h3 class="resume-company">GenSpark</h3>
@@ -48,19 +61,22 @@
           <div class="bp-block-gs">
             <ul>
               <li>
-                Utilized Java, JavaFX, Spring, Spring Boot, and React to design
-                and develop full-stack applications for GenSpark.
-              </li>
-              <li>
-                Collaborated with cross-functional teams to create complex
-                applications, delivering high-quality solutions that met
-                business needs on time and on budget.
-              </li>
-              <li>
                 Proactively invested time in self-learning to improve technical
-                abilities, staying up-to-date with industry trends and
+                abilities, staying up to date with industry trends and
                 implementing best practices to enhance code quality,
                 performance, and user experience.
+              </li>
+              <li>
+                Collaborated with a team of three people to design and develop a
+                full-stack application that functioned as a website for a
+                restaurant called “Mario’s Pizza” using Java, Spring Boot, and
+                React.
+              </li>
+              <li>
+                Created a boarding pass application that allows for the
+                generation and storage of a .pdf boarding pass based on the
+                customer’s travel details. This application was developed using
+                Java and JavaFX.
               </li>
             </ul>
           </div>
