--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer mt-auto py-3 w-100 bg-dark">
+<footer class="footer mt-auto py-3 w-100 bg-dark fixed-bottom">
   <div class="container">
     <p>Copyright &copy; {{year}}</p>
   </div>
