--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,7 +1,7 @@
 footer {
     color: white;
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     height: 55px;
   }
