--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -10,6 +10,11 @@ h4 {
   margin: auto;
 }
 
+#projects {
+  scroll-margin-top: 75px;
+  margin-bottom: 100px;
+}
+
 .section-container {
     margin-bottom: 75px;
   }
