Removed contact form and resume download link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
 <app-projects></app-projects>
 <app-resume></app-resume>
 <app-skills></app-skills>
-<app-contact-form></app-contact-form>
+<!--<app-contact-form></app-contact-form>-->
 <app-footer></app-footer>
