--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -2,10 +2,10 @@
   <div class="container">
     <app-section-header [headerTitle]="sectionHeader"></app-section-header>
     <div class="row">
-      <p>
-        Click <button (click)="downloadResume()">HERE</button> to download my
-        resume!
-      </p>
+<!--      <p>-->
+<!--        Click <button (click)="downloadResume()">HERE</button> to download my-->
+<!--        resume!-->
+<!--      </p>-->
       <div class="col-sm-12 section-container">
         <div class="resume-listing">
           <img
