Removed contact link from navbar, updated my name, and updated introduction.

--- a/src/app/greeting/greeting.component.html
+++ b/src/app/greeting/greeting.component.html
@@ -12,18 +12,19 @@
               />
 
               <p class="about-me bg-dark">
-                I am a talented software developer with a passion for creating
-                innovative and efficient solutions. With 1 year of experience, I
-                have honed my skills in a variety of web development
-                technologies, including HTML, CSS, Javascript, Java, React,
-                Angular, Spring boot, AWS, and Docker.<br />
+                Greetings! I'm Timothy Jonker, a full-stack engineer with a year
+                of professional experience. My technical toolkit includes
+                proficiency in Java, JavaScript, Spring, Spring Boot, Angular,
+                React, AWS, and Docker. I'm dedicated to delivering efficient
+                and scalable solutions by seamlessly integrating front-end and
+                back-end technologies.<br />
                 <br />
-                As a developer, I thrive on challenging projects and pride
-                myself on delivering high-quality results. I am constantly
-                seeking new and exciting opportunities to expand my skill set
-                and grow as a developer. I am passionate about creating
-                user-friendly web applications and love to collaborate with
-                others to find creative solutions to complex problems.<br />
+                Within this portfolio, you'll find a collection of my work,
+                reflecting my commitment to clean and robust code. Join me on
+                this exploration of the digital landscape as I showcase projects
+                and experiences that highlight my skills and expertise in the
+                realm of full-stack engineering. Let's dive into the world of
+                code together.<br />
               </p>
             </div>
           </div>
