--- a/src/app/jumbotron/jumbotron.component.html
+++ b/src/app/jumbotron/jumbotron.component.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="jumbo-header">Timothy Michael Jonker
+          <h1 class="jumbo-header">Timothy Jonker
           </h1>
         </div>
       </div>
